remove unnecessary directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .ipynb_checkpoints/
 .ipynb_checkpoints/bennett_matthew_stephen_shield_assignment1-checkpoint.ipynb
 .ipynb_checkpoints/.ipynb-checkpoint
+.idea/
